--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-HI COSMO
+HI COSMO!
+
+MY NAME IS CAMERON SUEZ FRANCO
+MY TEAM IS SPACE SALMON
+OUR GAME IS A 3-D RACING GAME
+
+
+Hello, my name is Carter. I can breath. Which is good because that means I''m not dead.
+
+
+
+<img src='http://worldcarslges/dragster/dragster-jet-dragster/dragster-jet-dragster-11.jpg"></img>
