--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ HI COSMO!
 MY NAME IS CAMERON SUEZ FRANCO.
 MY TEAM IS SPACE SALMON.
 OUR GAME IS A 3-D RACING GAME.
-
+Our other members are Justin and lucas
 
 Hello, my name is Carter. I can breath. Which is good because that means I''m not dead.
 
